[gd_scene load_steps=6 format=2]

[ext_resource path="res://Code/ChooseMode.gd" type="Script" id=1]
[ext_resource path="res://Scene/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/zorque.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Styles/Button.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
margin_left = 323.626
margin_top = 240.571
margin_right = 705.626
margin_bottom = 371.571
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.980392, 0.964706, 0, 1 )
text = "CHOOSE MODE:"

[node name="Human" type="Button" parent="."]
margin_left = 365.558
margin_top = 332.136
margin_right = 474.558
margin_bottom = 386.136
theme = ExtResource( 4 )
text = "VS HUMAN"

[node name="Online" type="Button" parent="."]
margin_left = 451.476
margin_top = 416.622
margin_right = 560.476
margin_bottom = 470.622
theme = ExtResource( 4 )
text = "ONLINE"

[node name="AI" type="Button" parent="."]
margin_left = 525.0
margin_top = 329.0
margin_right = 638.0
margin_bottom = 387.0
theme = ExtResource( 4 )
text = "VS CPU"
[connection signal="pressed" from="Human" to="." method="_on_Human_pressed"]
[connection signal="pressed" from="Online" to="." method="_on_Online_pressed"]
[connection signal="pressed" from="AI" to="." method="_on_AI_pressed"]
